@@ -10,7 +10,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 
 - dhcpv4 message variants 9-18 added, breaking change for `MessageType`
-- dhcpv4 added DhcpOption for ClientLastTransactionTime (91) & AssociatedIp (92)
+- dhcpv4 added DhcpOption for 91/92/93/94/97
+- UnknownOption encode/decode
 
 ## [0.7.0]
 
